--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SampleApp</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
+<title>Ruby on Rails Tutorial Sample App | <%= @title %></title>
 </head>
 <body>
-
-<%= yield %>
-
+Contents
 </body>
 </html>
