Rerouted everything - design change ...

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Sample App<h1>
+<p>
+	This is a home page for the Ruby Tutorial.
+</p>
+
+
+<%= link_to "Sing up now!", '#', :class => "signup_button round" %>
