--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Ruby on Rails Tutorial Sample App | <%= @title %></title>
-</head>
-<body>
-Contents
-</body>
+	<head>
+		<title><%= title %></title>
+		<%= csrf_meta_tag %>
+		<%= render 'layouts/stylesheets' %>
+	</head>
+	<body>
+		<div class="container">
+			<%= render 'layouts/header' %>
+			<section class="round">
+				<%= yield %>
+			</section>
+			<%= render 'layouts/footer' %>
+		</div>
+	</body>
 </html>
+	
