Finished layouts an routes

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,4 +4,4 @@
 </p>
 
 
-<%= link_to "Sing up now!", '#', :class => "signup_button round" %>
+<%= link_to "Sing up now!", signup_path, :class => "signup_button round" %>
